<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gameActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="38dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/category1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_1_label" />

            <Button
                android:id="@+id/category2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_2_label" />

            <Button
                android:id="@+id/category3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_3_label" />

            <Button
                android:id="@+id/category4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_4_label" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/point_200_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_1" />

            <Button
                android:id="@+id/point_200_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_1" />

            <Button
                android:id="@+id/point_200_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_1" />

            <Button
                android:id="@+id/point_200_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/point_400_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_2" />

            <Button
                android:id="@+id/point_400_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_2" />

            <Button
                android:id="@+id/point_400_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_2" />

            <Button
                android:id="@+id/point_400_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/point_600_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_3" />

            <Button
                android:id="@+id/point_600_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_3" />

            <Button
                android:id="@+id/point_600_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_3" />

            <Button
                android:id="@+id/point_600_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/point_800_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_4" />

            <Button
                android:id="@+id/point_800_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_4" />

            <Button
                android:id="@+id/point_800_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_4" />

            <Button
                android:id="@+id/point_800_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/point_1000_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_5" />

            <Button
                android:id="@+id/point_1000_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_5" />

            <Button
                android:id="@+id/point_1000_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_5" />

            <Button
                android:id="@+id/point_1000_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_value_5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/player1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player1_name_label"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/player1_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/player_score_default"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/player2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player2_name_label"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/player2_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/player_score_default"
                android:textSize="30sp" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>